# bldc-ffb-wheel

./: README.md
board/: README.md
docs/: codemasters_games.md
docs/codemasters_games/: README.md
docs/ru/: index.md
firmware/: .cproject  .mxproject  .project  CMakeLists.txt  FFB-WHEEL Debug.launch  FFB-WHEEL.ioc  FFB-WHEEL.launch  README.md  STM32F405RGTX_FLASH.ld
firmware/Core/Inc/: adc.h  i2c.h  main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
firmware/Core/Src/: adc.c  dma.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c
firmware/Middlewares/Common/Inc/: actuator.h  as504x.h  circular_buffer.h  common_math.h  common_resources.h  dwt_delay.h  effects.h  effects_constants.h  generic_commands.h  global_settings.h  hid_report_handlers.h  persistance.h  tm_wheel.h  usb_device.h  usb_reports.h  usbd_conf.h  usbd_customhid.h  usbd_desc.h
firmware/Middlewares/Common/Src/: actuator.c  as504x.c  circular_buffer.c  common_math.c  dwt_delay.c  effects_pid.c  hid_generic_report_handlers.c  hid_report_descriptor.c  hid_report_handlers.c  hid_reports.c  persistance.c  tm_wheel.c  usb_device.c  usbd_conf.c  usbd_customhid.c  usbd_desc.c
firmware/Middlewares/Controller/: ffb.c  resources_common.c
firmware/hex/: FFB_WHEEL_ODRIVE_INCREMENTAL_ENCODER_20220418.hex  FFB_WHEEL_ODRIVE_INCREMENTAL_ENCODER_2022_04_27.hex  FFB_WHEEL_ODRIVE_INCREMENTAL_ENCODER_2022_05_18.hex  FFB_WHEEL_ODRIVE_INCREMENTAL_ENCODER_22020420.hex  btn8982-as504x-20210809.hex  btn8982-as504x-20211216.hex  ffbeast-odrive-240124.hex  odrive-as504x-20210820.hex  odrive-as504x-20211216.hex  odrive-encoder-test.hex  odrive-incremental-20210530.hex
firmware/settings-ui/i18n/: hardware_settings_ui_ru.qm
hardware/: README.md
hardware/model_2/: Encoder Bracket Base.STL  Encoder Pivot.STL  Pivot Clamp.STL  Pivot End LH.STL  Pivot End RH.STL  Stand LH.STL  Stand RH.STL  motor_clamp.stl  qr_hub_v1.1.stl  qr_wheel_v1.1.stl
hardware/print_parts/: BASE.STEP  ENCODER_HOLDER.STEP  HTD_3M_PULLEY_ENCODER.STEP  HTD_3M_PULLEY_MOTOR.STEP
hoverboard-motor-base/: ASSEMBLY.SLDASM  BASE.SLDPRT  LEG.SLDPRT
settings-ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  settings-ui.pro
