cmake_minimum_required(VERSION 3.15)
project(FFB_WHEEL C)

set(CMAKE_C_STANDARD 11)

add_definitions(-DSTM32F405xx)

include_directories(Core/Inc)
include_directories(Drivers/CMSIS)
include_directories(Drivers/CMSIS/Device)
include_directories(Drivers/CMSIS/Device/ST)
include_directories(Drivers/CMSIS/Device/ST/STM32F4xx)
include_directories(Drivers/CMSIS/Device/ST/STM32F4xx/Include)
include_directories(Drivers/CMSIS/Include)
include_directories(Drivers/STM32F4xx_HAL_Driver/Inc)
include_directories(Drivers/STM32F4xx_HAL_Driver/Inc/Legacy)
include_directories(Middlewares/Common/Inc)
include_directories(Middlewares/ST/STM32_USB_Device_Library/Core/Inc)

add_executable(FFB_WHEEL
        Core/Inc/adc.h
        Core/Inc/dma.h
        Core/Inc/gpio.h
        Core/Inc/i2c.h
        Core/Inc/main.h
        Core/Inc/spi.h
        Core/Inc/stm32f4xx_hal_conf.h
        Core/Inc/stm32f4xx_it.h
        Core/Inc/tim.h
        Core/Src/adc.c
        Core/Src/dma.c
        Core/Src/gpio.c
        Core/Src/i2c.c
        Core/Src/main.c
        Core/Src/spi.c
        Core/Src/stm32f4xx_hal_msp.c
        Core/Src/stm32f4xx_hal_timebase_tim.c
        Core/Src/stm32f4xx_it.c
        Core/Src/syscalls.c
        Core/Src/sysmem.c
        Core/Src/system_stm32f4xx.c
        Core/Src/tim.c
        Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f405xx.h
        Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
        Drivers/CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h
        Drivers/CMSIS/Include/cmsis_armcc.h
        Drivers/CMSIS/Include/cmsis_armclang.h
        Drivers/CMSIS/Include/cmsis_compiler.h
        Drivers/CMSIS/Include/cmsis_gcc.h
        Drivers/CMSIS/Include/cmsis_iccarm.h
        Drivers/CMSIS/Include/cmsis_version.h
        Drivers/CMSIS/Include/core_armv8mbl.h
        Drivers/CMSIS/Include/core_armv8mml.h
        Drivers/CMSIS/Include/core_cm0.h
        Drivers/CMSIS/Include/core_cm0plus.h
        Drivers/CMSIS/Include/core_cm1.h
        Drivers/CMSIS/Include/core_cm23.h
        Drivers/CMSIS/Include/core_cm3.h
        Drivers/CMSIS/Include/core_cm33.h
        Drivers/CMSIS/Include/core_cm4.h
        Drivers/CMSIS/Include/core_cm7.h
        Drivers/CMSIS/Include/core_sc000.h
        Drivers/CMSIS/Include/core_sc300.h
        Drivers/CMSIS/Include/mpu_armv7.h
        Drivers/CMSIS/Include/mpu_armv8.h
        Drivers/CMSIS/Include/tz_context.h
        Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_adc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_adc_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cortex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_def.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_exti.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ramfunc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2c.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2c_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pcd.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pcd_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_spi.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim_ex.h
        Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_usb.h
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ramfunc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_spi.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c
        Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_usb.c
        Middlewares/Common/Inc/actuator.h
        Middlewares/Common/Inc/as504x.h
        Middlewares/Common/Inc/circular_buffer.h
        Middlewares/Common/Inc/common_math.h
        Middlewares/Common/Inc/common_resources.h
        Middlewares/Common/Inc/dwt_delay.h
        Middlewares/Common/Inc/effects.h
        Middlewares/Common/Inc/effects_constants.h
        Middlewares/Common/Inc/persistance.h
        Middlewares/Common/Inc/generic_commands.h
        Middlewares/Common/Inc/global_settings.h
        Middlewares/Common/Inc/hid_report_handlers.h
        Middlewares/Common/Inc/tm_wheel.h
        Middlewares/Common/Inc/usb_device.h
        Middlewares/Common/Inc/usb_reports.h
        Middlewares/Common/Inc/usbd_conf.h
        Middlewares/Common/Inc/usbd_customhid.h
        Middlewares/Common/Inc/usbd_desc.h
        Middlewares/Common/Src/actuator.c
        Middlewares/Common/Src/as504x.c
        Middlewares/Common/Src/circular_buffer.c
        Middlewares/Common/Src/common_math.c
        Middlewares/Common/Src/dwt_delay.c
        Middlewares/Common/Src/effects_pid.c
        Middlewares/Common/Src/persistance.c
        Middlewares/Common/Src/hid_generic_report_handlers.c
        Middlewares/Common/Src/hid_report_descriptor.c
        Middlewares/Common/Src/hid_report_handlers.c
        Middlewares/Common/Src/hid_reports.c
        Middlewares/Common/Src/tm_wheel.c
        Middlewares/Common/Src/usb_device.c
        Middlewares/Common/Src/usbd_conf.c
        Middlewares/Common/Src/usbd_customhid.c
        Middlewares/Common/Src/usbd_desc.c
        Middlewares/Controller/ffb.c
        Middlewares/Controller/resources_common.c
        Middlewares/ST/STM32_USB_Device_Library/Core/Inc/usbd_core.h
        Middlewares/ST/STM32_USB_Device_Library/Core/Inc/usbd_ctlreq.h
        Middlewares/ST/STM32_USB_Device_Library/Core/Inc/usbd_def.h
        Middlewares/ST/STM32_USB_Device_Library/Core/Inc/usbd_ioreq.h
        Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_core.c
        Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_ctlreq.c
        Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_ioreq.c)
